Fixes navbar-toggler overflow, adds media links to README.md, adds video link to article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,28 @@
-/*pushes 1st html element below navbar down, to avoid being covered by the fixed navbar*/
+/*---------------- Pushes 1st html element below navbar down, to avoid being covered by the fixed navbar ----------------*/
 
 body {
     padding-top: 54px;
 }
 
 
-/* Make the image in the carousel fully responsive */
+/*---------------- Make the image in the carousel fully responsive ----------------*/
 
 .carousel-inner img {
     width: 100%;
     height: 100%;
+}
+
+/*---------------- Media Qeries ----------------*/
+
+/* Fixes issues with navbar-toggler overflowing on to next line on small devices below 373px */
+/* (img-fluid on navbar-brand image did not fix this) */
+
+@media screen and (max-width: 373px) {
+    #logo {
+        width: 201px;
+        height: 33px;
+    }
+body {
+    padding-top: 45px;
+}
 }
